Fix alignment of styled checkout

--- a/assets/css/components/_inputs.scss
+++ b/assets/css/components/_inputs.scss
@@ -67,7 +67,7 @@
     font-size: 16px;
     line-height: 1;
     color: white;
-    padding: 2px 4px;
+    padding: 1px 2px;
 }
 
 /* Only for Desktops */
