--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,7 +474,7 @@ a.btn {
   font-size: 16px;
   line-height: 1;
   color: white;
-  padding: 2px 4px; }
+  padding: 1px 2px; }
 
 /* Only for Desktops */
 @media only screen and (min-width: 1200px) {
